--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server",
+    "dev:start": "webpack-dev-server",
     "build": "webpack",
     "watch": "webpack -w"
   },
