--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/ryotogashi/LivroDeReceitas#readme",
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "react": "^16.10.2",
